<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ActivityBDexterna"


    >

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#B2EBF2"
        android:text="@string/tituloexterna"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="40dp" />

    <EditText
        android:id="@+id/codigoChocolates"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/Codigo"
        android:inputType="textPersonName"
        android:minHeight="48dp" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="40dp" />

    <EditText
        android:id="@+id/nombreChocolates"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/IngreseNombre"
        android:inputType="textPersonName"
        android:minHeight="48dp" />
    <Space
        android:layout_width="match_parent"
        android:layout_height="40dp" />

    <EditText
        android:id="@+id/precioChocolates"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/Precio"
        android:inputType="textPersonName"
        android:minHeight="48dp" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="40dp" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="40dp" />

    <Button
        android:id="@+id/btnAgregar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="VistaChocolates"
        android:text="@string/IngresarChocolates" />

    <Button
        android:id="@+id/btnlista"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="VistaChocolates"
        android:text="@string/listadechocolates" />

    <Button
        android:id="@+id/btnEliminarChocolate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/EliminarChocolates" />

    <Button
        android:id="@+id/btnModificarChocolate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ModificarChocolates" />

</LinearLayout>