<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="66dp"
        android:background="#4CAF50"
        android:text="App Examen de Repeticion"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="51dp" />

    <EditText
        android:id="@+id/edTextNombreUsuario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/nombreUsuario"
        android:inputType="textPersonName"
        android:minHeight="48dp" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="65dp" />

    <EditText
        android:id="@+id/edTextPass"
        android:layout_width="match_parent"
        android:layout_height="91dp"
        android:ems="10"
        android:hint="@string/Pass"
        android:inputType="textPersonName" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="93dp"
        android:textAlignment="center" />

    <Button
        android:id="@+id/btnIniciarSeccion"
        android:layout_width="match_parent"
        android:layout_height="76dp"
        android:onClick="VistaBDexterna"
        android:text="@string/IniciarSeccion" />

    <Button
        android:id="@+id/btnNuevoUsuario"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:onClick="RegistarUsuario"
        android:text="@string/NuevoUsuario" />
</LinearLayout>